Fixed spacing of navbar and mobile footer fonts

--- a/assets/css/AboutStyle.css
+++ b/assets/css/AboutStyle.css
@@ -42,6 +42,7 @@ a {
 #Logo {
     height: 32px;
     margin: 8px;
+    margin-top: 10px;
 }
 
 @media only screen and (max-width: 978px) {
@@ -58,6 +59,8 @@ a {
 @media only screen and (max-width: 480px) {
     #Logo {
         height: 32px;
+        margin-top: 8px;
+        margin-bottom: 6px;
     }
 }
 
@@ -98,7 +101,7 @@ a {
 }
 
 .nav-item {
-    margin-left: 5rem;
+    margin-left: 3rem;
 }
 
 .nav-link{
@@ -447,24 +450,29 @@ body {
     z-index: 1;
   }
 
-/*  .footer {
-    margin-top: 8px;
-  }*/
+  .footer {
+    padding-top: 16px;
+    padding-bottom: 24px;
+  }
+
+  .footer-logo {
+    width: 80px;
+  }
+
+  .footer-content-1 {
+    margin-bottom: 16px;
+  }
 
   .footer-header-text {
-   font-size: 20px;
-   line-height: 24px;
+   font-size: 14px;
+   line-height: 20px;
    font-weight: 800;
   }
 
   .footer-body-text {
-     font-size: 16px;
-     line-height: 24px;
+     font-size: 12px;
+     line-height: 20px;
      font-weight: 400;
-  }
-
-  .footer-logo {
-    width: 120px;
   }
 
 }
