--- a/assets/css/DrinksStyle.css
+++ b/assets/css/DrinksStyle.css
@@ -98,7 +98,7 @@ a {
 }
 
 .nav-item {
-    margin-left: 5rem;
+    margin-left: 3rem;
 }
 
 .nav-link{
@@ -287,6 +287,7 @@ p {
 .Drinks-Content {
   display: flex;
   flex-direction: column;
+  margin-top: 2.5%;
 }
 
 .Our-Top-Drinks-Title {
@@ -551,20 +552,29 @@ p {
 }
 
 @media only screen and (max-width: 480px) {
+  .footer {
+    padding-top: 16px;
+    padding-bottom: 24px;
+  }
+
+  .footer-logo {
+    width: 80px;
+  }
+  
+  .footer-content-1 {
+    margin-bottom: 16px;
+  }
+
   .footer-header-text {
-   font-size: 20px;
-   line-height: 24px;
+   font-size: 14px;
+   line-height: 20px;
    font-weight: 800;
   }
 
   .footer-body-text {
-     font-size: 16px;
-     line-height: 24px;
+     font-size: 12px;
+     line-height: 20px;
      font-weight: 400;
-  }
-
-  .footer-logo {
-    width: 120px;
   }
 
 }
